--- a/perch/templates/content/custom_diary_table.html
+++ b/perch/templates/content/custom_diary_table.html
@@ -14,7 +14,7 @@
 
 <table class="styled" role="grid" summary="Schedule for events in the coming week(s)">
     <thead>
-        <tr>
+        <tr class="tabletop">
             <th scope="col">Day/Time</th>
             <th scope="col">Event</th>
             <th scope="col">Notes</th>
