--- a/css/breaks.css
+++ b/css/breaks.css
@@ -118,6 +118,11 @@
         padding: 0;
         width: 100%; 
     }
+    table.styled {
+        margin: 0;
+        width: 100%;
+    }
+    }
     table.styled td {
         padding: 0;
     }
