--- a/css/breaks.css
+++ b/css/breaks.css
@@ -44,6 +44,7 @@
         /*float: left; had to remove as when you put a link in around images it ruins any margins etc for some reason */ /*Lets them stack*/
         margin-left: 2%; /*this works for some reason, I can't use first-child as that removes all margins and padding between items somehow. Could have something to do with Perch, I have no idea.*/
         max-width: 96%; /*-3% due to padding-left %*/
+        box-shadow: 0 0 0;
     }
     
     .container { /*Change container to fill 100% width on lower resolutions, makes more room for content boxes*/
@@ -130,6 +131,12 @@
         padding: 0;
     }
     
+    /*Reducing emphasis for mobile layout to prevent confusing display*/
+    td.event-Bold {
+        font-size: 1.7rem;
+        font-weight: 900;
+    }
+    
     .bgimage-window {
         background: url(../img/bg-window.png) 50% 0%/150% no-repeat;
     }
@@ -147,6 +154,14 @@
     }
 
     .textbig2 {
+        font-size: 5rem;
+    }
+    
+    .textbig1-5 {
+        font-size: 5rem;
+    }
+    
+    .textbig {
         font-size: 5rem;
     }
     
