More design/Perch polishing

--- a/perch/templates/content/custom_contact.html
+++ b/perch/templates/content/custom_contact.html
@@ -11,13 +11,13 @@
 </perch:help>
 
 <perch:repeater id="emails" label="Add an email" title="true">
-    <p class="margin-3-left">Email: <strong><a href="mailto:<perch:content id="email" type="text" label="Email" required="true" title="true" help="Format: name@email.com" chars="50"/>"><perch:content id="email" /></a></strong></p>
+    <p>Email: <strong><a href="mailto:<perch:content id="email" type="text" label="Email" required="true" title="true" help="Format: name@email.com" chars="50"/>"><perch:content id="email" /></a></strong></p>
 </perch:repeater>
 
 <perch:repeater id="phonenos" label="Add a landline phone number" title="true">
-    <p class="margin-3-left">Telephone: <strong><perch:content id="phone" type="text" label="Phone number" required="true" title="true" help="Format: ##### ######, i.e. 01903 592308" chars="12"/></strong></p>
+    <p>Telephone: <strong><perch:content id="phone" type="text" label="Phone number" required="true" title="true" help="Format: ##### ######, i.e. 01903 592308" chars="12"/></strong></p>
 </perch:repeater>
 
 <perch:repeater id="mobilenos" label="Add a mobile phone number" title="true">
-    <p class="margin-3-left">Mobile: <strong><perch:content id="mobile" type="text" label="Mobile phone number" required="true" title="true" help="Format: ##### ######, i.e. 07503 592308" chars="12"/></strong></p>
+    <p>Mobile: <strong><perch:content id="mobile" type="text" label="Mobile phone number" required="true" title="true" help="Format: ##### ######, i.e. 07503 592308" chars="12"/></strong></p>
 </perch:repeater>
