--- a/perch/templates/content/custom_links_list.html
+++ b/perch/templates/content/custom_links_list.html
@@ -5,7 +5,7 @@
 
   <p>You can either:<br />
     <span style="padding-left: 20px">- <strong>Edit an existing website</strong> by changing the fields that are currently on this page</span><br />
-    <span style="padding-left: 20px">- <strong>Add a new website</strong> to the bottom of the list by scrolling to the bottom of this page and clicking "Save &amp; Add another", which will result in a new blank set of fields appearing at the bottom of this page that can then be filled in with appropriate text.</span>
+      <span style="padding-left: 20px">- <strong>Add a new website</strong> to the bottom of the list by scrolling to the bottom of this page and clicking "Save &amp; Add another", which will result in a new blank set of fields appearing at the bottom of this page that can then be filled in with appropriate text.</span></p>
 
 </perch:help>
 
