--- a/perch/templates/content/custom_club_photos_archive.html
+++ b/perch/templates/content/custom_club_photos_archive.html
@@ -3,6 +3,11 @@
     
     <p>This is for the image gallery on the Holiday Club page. The gallery is split into rows of three images each. You can enter the title of the Holiday Club that these pictures are from in the "Pictures from" area below.</p>
     
+    <p><strong>To add another club with title and rows of images</strong>, simply click "Save &amp; add another" at the bottom and a new area will appear at the bottom of the page.</p>
+    <p><strong>To delete a club</strong>, click the little red Delete button to the top right of a club area below.</p>
+    
+    <br />
+    
     <p><strong>To add a new row of images:</strong> Click "Add an item" in the lower right corner underneath the bottom-most group of images.</p>
     <p><strong>To delete a row of images:</strong> Mouse over the number at the top of a group of images below to get a red X to appear, click the red X to delete the entry.</p>
     <p><strong>To reorder image rows:</strong> Mouse over the number as above, but instead click and hold on the three lines underneath the red X and drag your mouse down/up to reorder.</p>
@@ -17,14 +22,10 @@
         <span style="padding-left: 60px">- Click "Use Selected" in the top right<br />
         <span style="padding-left: 60px">- <strong>N.B. if you enter this area by accident and want to go back</strong>, click the grey (X) icon in the far top right of the "Select an Asset" box, or press ESC on your keyboard.<br />
     </p>
-            
-    <p><strong>When new club photos need to be added</strong> it's a good idea to delete the below and replace it with the new photos - old photos can be added to the Holiday Club Photos Archive page.</p>
 </perch:help>
-
+            
 <h1 class="centre padding-1">Pictures from <perch:content id="clubtitle" type="text" required="true" label="Pictures from" title="true" help="Club title and year, i.e. Rocky's Plaice (2016)" /></h1>
-                
-<p class="centre">(All identifiable pictures of children used with permission of parents)</p>
-
+               
 <perch:repeater id="photos_row" label="Photo rows" title="true">
     <div class="left margin-4-top">
         <figure class="fluid-images-hc">
@@ -52,3 +53,5 @@
         </figure>
     </div>
 </perch:repeater>
+            
+<div class="spacer"></div>
