--- a/perch/templates/content/section-events-right.html
+++ b/perch/templates/content/section-events-right.html
@@ -9,6 +9,22 @@
     <p><strong>To reorder sections:</strong> Mouse over the number as above, but instead click and hold on the three lines underneath the red X and drag your mouse down/up to reorder.</p>
     
     <p>As ever for any of this to take effect you need to click Save Changes at the bottom. If you make a mistake just click Cancel instead.</p>
+    
+    <p>
+        Adding styling/images etc to content:<br />
+        <span style="padding-left: 20px">- <strong>Bold/italic can be done</strong> by selecting the text you want to bolden/italicise and then clicking the little B or I buttons just above the area where you type. Or, you can add ** to either side of a piece of text for bold, or __ for italics - i.e. "Our club runs from **3-6pm**. Parents __please be aware__."</span><br />
+        <span style="padding-left: 20px">- <strong>Add an image</strong> by clicking where you want the image to appear (advisable to only place one between two paragraphs of text) and then clicking the little picture symbol in the same area as the bold and italic buttons above. In the "Select an Asset" box that appears:</span><br />
+            <span style="padding-left: 40px"> - Click an existing item that you want to link to and then click "Use Selected" (should be highlighted green), or<br />
+            <span style="padding-left: 40px"> - Click the "Add Asset" button in the top right, and then either drop an image into the indicated box area or click the box area to select the file from your computer.<br />
+                <span style="padding-left: 60px">- Click the image that you just added that should now be displayed in green<br />
+                <span style="padding-left: 60px">- Click "Use Selected" in the top right<br />
+                <span style="padding-left: 60px">- <strong>N.B. if you enter this area by accident and want to go back</strong>, click the grey (X) icon in the far top right of the "Select an Asset" box, or press ESC on your keyboard.<br />
+        <span style="padding-left: 20px"><strong>After this, a piece of code should appear that looks like this: [cms:asset 10 title="Hc 04"]. To get the image to centre and look nice, you'll need to change this to read:<br /><br />
+        
+        [cms:asset 10 title="Hc 04" class="image"]<br /><br />
+            
+        Basically just adding class="image" within the square bracket. Make sure there's a space between the title part and the class="image" part so it's composed exactly as above.</strong></span>
+    </p>
 </perch:help>
 
 <article class="background-white75 border-top-15-orange boxshadow-softextra6 five columns margin-6-top offset-by-one <perch:content id="enabler" type="select" label="Show/hide this area" options="hidden, not-hidden" allowempty="false" required="true" />" role="article">
@@ -18,7 +34,7 @@
         <h2 class="padding-1-body"><perch:content id="heading-section" type="text" label="Heading for this section" required="true" title="true" /></h2>
         
         <div>
-            <perch:content id="body" type="textarea" label="Body text for this section" markdown="true" editor="markitup" required="true" />
+            <perch:content id="body" type="textarea" label="Body text for this section" markdown="true" editor="markitup" required="true" imageclasses="image" />
         </div>
     </perch:repeater>
 </article>
