Colour contrast changes
Got almost everything to at least 3:1, best I could do

--- a/css/breaks.css
+++ b/css/breaks.css
@@ -262,4 +262,8 @@
     .textbig2 {
         font-size: 4rem;
     }
+    
+    .textshadow-strong {
+        text-shadow: 4px 4px 3px #000;
+    }
 }
