--- a/css/style.css
+++ b/css/style.css
@@ -66,12 +66,18 @@ footer {
     text-align: center;
     width: 80%;
 }
+footer a:link {
+    color: #004f5c;
+}
+footer a:visited {
+    color: #004f5c;
+}
 footer ul {
     margin: 0;
     padding: 2rem 0 0 0;
 }
 footer ul li {
-    border-right: 0.3rem solid #44c3ff;
+    border-right: 0.3rem solid #004f5c;
     display: inline-block;
     margin: 0;
     padding: 0 1rem 0 0.7rem;
@@ -153,11 +159,11 @@ IDs and classes
     background: #fff;
 }
 #nav-main a {
-    color: #ffa726;
+    color: #ff7800;
     text-decoration: none;
 }
 #nav-main a:hover {
-    color: #e28600;
+    color: #db6700;
 }
 #nav-main ul {
     padding: 0;
@@ -202,8 +208,9 @@ IDs and classes
 #top {                                                    /* navigation links at top of each page */
   color: #fff;
   font-family: "Alegreya Sans SC", "Trebuchet MS", sans-serif;
-  font-size: 1.75rem;
+  font-size: 2.2rem;
   text-align: right;
+    text-shadow: 0 0 5px #000;
   width: 100%;                                            /* helps with centring navigation */
 }
 #top a:hover {
@@ -221,7 +228,6 @@ IDs and classes
 
 #top ul li {
   display: inline-block;                                /* wraps with viewport size */
-  font-size: 1.5rem;
   margin-right: 20px;                                   /* spacing for list items when horizontal */
   text-align:left;
   *display:inline;/* IE7 */
@@ -432,7 +438,7 @@ figure.fluid-images-hc img {     /*figure area containing 3 images side by side*
     border-top: 15px solid #fea626;
 }
 .hometop-news h2 {
-    color: #ff7043;
+    color: #ff5400;
 }
 /*End of top home area*/
 /*Home carousel underneath the above*/
@@ -615,6 +621,9 @@ figure.fluid-images-hc img {     /*figure area containing 3 images side by side*
 }
 .textshadow-soft {
     text-shadow: 4px 4px 12px #666;
+}
+.textshadow-strong {
+    text-shadow: 4px 4px 9px #000;
 }
 .textpurple {
     color: #7e57c2;
