--- a/perch/templates/content/article-blurb-titles.html
+++ b/perch/templates/content/article-blurb-titles.html
@@ -18,6 +18,8 @@
             
         Basically just adding class="image" within the square bracket. Make sure there's a space between the title part and the class="image" part so it's composed exactly as above.</strong></span>
     </p>
+                    
+    <p><strong>To add links</strong>: select/highlight the area of text that you want to be a link and then click the small chain link symbol to the far right of the toolbar above the text area below. A small box labeled URL should appear. Type in/paste the link here. If you want to include a link to a page on the website, it's simplest to include the full address (so "http://preview.ferringbaptist.org.uk/club/"). This will then change your text to look like this: <code>[this is the text to be linked](http://preview.ferringbaptist.org.uk/club/ "")</code></p>
 </perch:help>
 
 <h2 class="padding-1-body"><perch:content id="heading" type="text" label="Heading for section" required="true" title="true" /></h2>
