--- a/perch/templates/content/custom_diary_table.html
+++ b/perch/templates/content/custom_diary_table.html
@@ -15,9 +15,9 @@
 <table class="styled" role="grid" summary="Schedule for events in the coming week(s)">
     <thead>
         <tr class="tabletop">
-            <th scope="col">Day/Time</th>
+            <th class="th-time" scope="col">Day/Time</th>
             <th scope="col">Event</th>
-            <th scope="col">Notes</th>
+            <th class="th-notes" scope="col">Notes</th>
         </tr>
     </thead>
     <tbody>
