--- a/perch/templates/content/custom_carrousel.html
+++ b/perch/templates/content/custom_carrousel.html
@@ -19,6 +19,8 @@
         <span style="padding-left: 60px">- Click "Use Selected" in the top right<br />
         <span style="padding-left: 60px">- <strong>N.B. if you enter this area by accident and want to go back</strong>, click the grey (X) icon in the far top right of the "Select an Asset" box, or press ESC on your keyboard.<br />
     </p>
+            
+    <p><strong>To add links</strong>: select/highlight the area of text that you want to be a link and then click the small chain link symbol to the far right of the toolbar above the text area below. A small box labeled URL should appear. Type in/paste the link here. If you want to include a link to a page on the website, it's simplest to include the full address (so "http://preview.ferringbaptist.org.uk/club/"). This will then change your text to look like this: <code>[this is the text to be linked](http://preview.ferringbaptist.org.uk/club/ "")</code></p>
 </perch:help>
 
             <div class="carousel twelve columns">
