--- a/perch/templates/content/custom_carrousel.html
+++ b/perch/templates/content/custom_carrousel.html
@@ -34,6 +34,7 @@
 
                                     <perch:content id="carrousel_text" type="textarea" label="Description of activity" markdown="true" editor="markitup" imagewidth="640" imageheight="480" maxlength="675" required="true" />
                                 </article>
+                                <div class="spacer"></div>
                             </div><!--End of padding-3-->
                         </div><!--End of carousell section-->
                     </div>
