--- a/perch/templates/content/article-events.html
+++ b/perch/templates/content/article-events.html
@@ -40,5 +40,5 @@
 
   <div class="spacer"></div>
 
-  <perch:content id="body" type="textarea" label="Body" markdown="true" editor="simplemde" required="true" />
+  <perch:content id="body" type="textarea" label="Body" markdown="true" editor="markitup" required="true"  imageclasses="image" />
 </div>
