--- a/perch/templates/content/custom_diary_coming.html
+++ b/perch/templates/content/custom_diary_coming.html
@@ -24,10 +24,10 @@
     <tbody class="tablecoming">
         <perch:repeater id="entries" label="Schedule items" title="true"><tr>
             <th scope="row"><perch:content id="entrydate" type="text" label="Date of Sunday in question" required="true" title="true" help="Format: month (short form) day, for example 'Jul 1st'" chars="9"/></th>
-            <td>
+            <td class="morning">
                 <perch:content id="entrymorning" type="text" label="Morning preacher" required="true" title="true" chars="50"/> <perch:content id="communion-morn" type="radio" label="Communion?" options="Yes, No" allowempty="false" required="true" suppress="true" /><perch:if id="communion-morn" value="Yes"><strong>(C)</strong></perch:if>
             </td>
-            <td>
+            <td class="evening">
                 <perch:content id="entryeve" type="text" label="Evening preacher" required="true" title="true" chars="50"/> <perch:content id="communion-eve" type="radio" label="Communion?" options="Yes, No" allowempty="false" required="true" suppress="true" /><perch:if id="communion-eve" value="Yes"><strong>(C)</strong></perch:if>
             </td>
         </tr></perch:repeater>
