--- a/perch/templates/content/text_block_home_news.html
+++ b/perch/templates/content/text_block_home_news.html
@@ -6,4 +6,4 @@
 
 <h2 class="centre padding-1"><perch:content id="newstitle" type="text" label="News title" required="true" title="true" /></h2>
 
-<perch:content id="newstext" type="textarea" label="Text" markdown="true" editor="markitup" imagewidth="640" imageheight="480" maxlength="200" required="true" />
+<perch:content id="newstext" type="textarea" label="Text" markdown="true" editor="markitup" imagewidth="640" imageheight="480" maxlength="200" required="true" imageclasses="image" />
