FINAL LIVE ADJUSTMENTS

--- a/perch/templates/content/custom_club_photos.html
+++ b/perch/templates/content/custom_club_photos.html
@@ -5,6 +5,7 @@
     
     <p><strong>To add a new row of images:</strong> Click "Add an item" in the lower right corner underneath the bottom-most group of images.</p>
     <p><strong>To delete a row of images:</strong> Mouse over the number at the top of a group of images below to get a red X to appear, click the red X to delete the entry.</p>
+    <p><strong>To delete an individual image:</strong> Mouse over the image in question and look for the red X that appears over the top left of the image, click that to delete the image. If you just want to replace the image, simply click the "Select or upload an image" link as below in the upload instructions.</p>
     <p><strong>To reorder image rows:</strong> Mouse over the number as above, but instead click and hold on the three lines underneath the red X and drag your mouse down/up to reorder.</p>
     
     <p><strong>To upload an image:</strong> Follow the usual steps as with any other image/file on the website:<br /><br />
