--- a/perch/templates/content/custom_club_photos_archive.html
+++ b/perch/templates/content/custom_club_photos_archive.html
@@ -1,15 +1,24 @@
 <perch:help>
     <p><strong>Instructions:</strong></p>
     
-    <p>This is for the image gallery on the Holiday Club page. The gallery is split into rows of three images each. You can enter the title of the Holiday Club that these pictures are from in the "Pictures from" area below.</p>
+    <p>This is for the image gallery on the Holiday Club archive page. The gallery is split into sections (one section for each club) with rows of three images. This is one of those club sections. To get back to the overall sections for the page, look at the links just above here (where it says Regions > Holiday Club photos archive > (name of the section that you're currently editing)) and click on the "Holiday Club photos archive" part. This will take you back to a list of the different sections.</p>
     
-    <p><strong>To add another club with title and rows of images</strong>, simply click "Save &amp; add another" at the bottom and a new area will appear at the bottom of the page.</p>
-    <p><strong>To delete a club</strong>, click the little red Delete button to the top right of a club area below.</p>
+    <p><strong>To add a new club to the archive page:</strong> Go back to the main page showing all the sections as instructed above, and then look at the top right of the screen for "+ Add another item". Click this and it will immediately take you to a new page where you can enter the new club's info and add images as below. OR you can click "Save &amp; add another" at the bottom and top of this page.
+        <br /> <br />
+        
+        <strong>To delete a club from the archive page:</strong> Click the red delete button next to a club on the right side on the above page. Then click the Delete button in the confirmation box that appears.
+        <br /><br />
+        
+        <strong>To reorder clubs on the archive page:</strong> Click the "= Reorder" button on the above page and click and drag the club titles up and down to reposition them.
+    </p>
     
-    <br />
+    <br /><br />
+        
+    <p>You can enter the title of the Holiday Club that these pictures are from in the "Pictures from" area below.</p>
     
     <p><strong>To add a new row of images:</strong> Click "Add an item" in the lower right corner underneath the bottom-most group of images.</p>
     <p><strong>To delete a row of images:</strong> Mouse over the number at the top of a group of images below to get a red X to appear, click the red X to delete the entry.</p>
+    <p><strong>To delete an individual image:</strong> Mouse over the image in question and look for the red X that appears over the top left of the image, click that to delete the image. If you just want to replace the image, simply click the "Select or upload an image" link as below in the upload instructions.</p>
     <p><strong>To reorder image rows:</strong> Mouse over the number as above, but instead click and hold on the three lines underneath the red X and drag your mouse down/up to reorder.</p>
     
     <p><strong>To upload an image:</strong> Follow the usual steps as with any other image/file on the website:<br /><br />
@@ -55,5 +64,9 @@
         </figure>
     </div>
 </perch:repeater>
+            
+<div class="spacer"></div>
+            
+<h3 class="centre clear"><a href="#top">Back to top</a></h3>
             
 <div class="spacer"></div>
