Room hire notice

--- a/perch/templates/content/custom_contact.html
+++ b/perch/templates/content/custom_contact.html
@@ -21,3 +21,5 @@
 <perch:repeater id="mobilenos" label="Add a mobile phone number" title="true">
     <p>Mobile: <strong><perch:content id="mobile" type="text" label="Mobile phone number" required="true" title="true" help="Format: ##### ######, i.e. 07503 592308" chars="12"/></strong></p>
 </perch:repeater>
+
+<perch:content id="body" type="textarea" label="Room hire message" title="true" markdown="true" editor="markitup" required="true" imageclasses="image" />
